# backpack-regex-example

./: Makefile  README.md  shell.nix
regex-indef/: regex-indef.cabal
regex-string/: regex.cabal
str-bytestring/: str-bytestring.cabal
str-string/: str-string.cabal
