name: regex-indef
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.25
synopsis:
    A minimal library for parsing regular expressions.
description:
    This is an indefinite library; it defines the module signature "Str" to avoid
    having a dependency on any particular implementation of strings.

library
    build-depends: base, regex-types
    exposed-modules: Regex
    signatures: Str
    default-language: Haskell2010
