name: str-bytestring
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.24
synopsis:
    A string library based on the 'ByteString' type.
description:
    An implementation of the "Str" module signature defined by the
    @regex-indef@ package. In this implementation, strings are 'ByteString's.

library
    build-depends: base, bytestring
    exposed-modules: Str.ByteString
    reexported-modules: Str.ByteString as Str
    default-language: Haskell2010
